[package]
name = "runcher"
build = "build.rs"
version = "0.6.101"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
description = "A generic launcher for Total War games since Empire: Total War."
license = "MIT"
edition = "2021"
repository = "https://github.com/Frodo45127/runcher"
categories = ["games"]
keywords = ["totalwar", "modding", "launcher"]
readme = "README.md"
rust-version = "1.67"

[dependencies]

# Internal dependencies.
rpfm_lib = { git = "https://github.com/Frodo45127/rpfm.git", branch = "develop", features = ["integration_log", "integration_git"] }
rpfm_extensions = { git = "https://github.com/Frodo45127/rpfm.git", branch = "develop" }
rpfm_ui_common = { git = "https://github.com/Frodo45127/rpfm.git", branch = "develop" }

# Serialization support.
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

# Compression support
zstd = "^0.12"
base64 = "^0.21"
sha256 = "^1.3"

# Config dependencies.
directories = "^5.0"
lazy_static = "^1.4"

# Error managing.
anyhow = "^1.0"
thiserror = "^1.0"

# Improved multi-thread Support.
crossbeam = "^0.8"

# Basic get/set support.
getset = "^0.1"

# Multithread iterator support.
rayon = "^1.7"

# Qt dependencies.
cpp_core = "^0.6"
qt_core = "^0.5"
qt_gui = "^0.5"
qt_widgets = "^0.5"
qt_ui_tools = "^0.5"

# Support for Regex operations.
regex = "^1"

# Support for open files in a native way.
open = "^5"

# Steam Workshop support.
#steam-workshop-api = "^0.2"
steam-workshop-api = { git = "https://github.com/Frodo45127/rs-steam-workshop-api.git" }

# Date displays
time = { version = "^0.3", features = ["formatting"] }

# Better iterator support.
itertools = "^0.11"

# Autoupdate support.
self_update = { version = "^0.38", features = ["archive-zip", "compression-zip-deflate", "compression-zip-bzip2", "compression-flate2"] }
tempfile = "^3.8"
zip-extract = "^0.1"
reqwest = "^0.11"

# CLI parsing, formatting and color support.
clap = { version = "^4", features = ["derive", "wrap_help"] }

# Windows shortcut support.
[target.'cfg(windows)'.dependencies]
mslnk = "^0.1"

# Windows resources support.
[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"

[profile.dev]
incremental = true
#opt-level = 3         #For performance debugging, check this. Makes compile times longer, but it gives way more accurate-with-release speeds.
