# Workspace containing all Runcher crates.
[workspace]
resolver = "2"
members = [
    "bouncer",
    "runcher",
    "workshopper",
]

[workspace.package]
version = "0.7.103"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
rust-version = "1.67"
edition = "2021"

[profile.dev]
incremental = true
opt-level = 3         #For performance debugging, check this. Makes compile times longer, but it gives way more accurate-with-release speeds.

[profile.release]
lto = true
debug = true
